--- a/todo.css
+++ b/todo.css
@@ -6,6 +6,7 @@
 }
 body {
   background: linear-gradient(90deg, blue, green);
+  padding: 100px;
 }
 .main-div {
   width: 100%;
@@ -77,6 +78,7 @@ body {
   display: inline-block;
   background-color: rgba(128, 128, 128, 0.552);
   margin-left: 33px;
+  margin-bottom: 10px;
   margin-top: 10px;
   padding: 10px;
   width: 350px;
@@ -90,7 +92,7 @@ body {
   height: 40px;
   margin-left: -5px;
 }
-@media screen and (max-width: 550px) {
+@media all and (max-width: 550px) {
   .main-div {
     width: 90%;
   }
